Fixed issue with navbar not showing

--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -10,8 +10,6 @@
     position: fixed;
     left: 0;
     top: 0;
-    -webkit-mask-image: linear-gradient(180deg, rgba(23,24,26,1) 0%, rgba(23,24,26,1) 70%, rgba(23,24,26,0) 100%);
-    mask-image: linear-gradient(180deg, rgba(23,24,26,1) 0%, rgba(23,24,26,1) 70%, rgba(23,24,26,0) 100%);
 }
 .nav .logo {
     color: white;
@@ -38,7 +36,7 @@
     padding: 24px 16px;
     transition: all 0.2s;
     min-height: calc(100vh - 60px);
-    background-color: #303030;
+    background-color: rgba(48, 48, 48, 0.8);
 }
 .nav__menu_list.active{
     right: 0;
